[package]
name = "liquid-cli"
version = "0.1.0"
edition = "2024"
description = "A simple CLI tool for Liquid Network"
authors = ["Angor Team"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
hex = "0.4"
bitcoin = "0.31.0"
elements = "0.24.0"
